--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.C.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.D.File = D:/logs/ANewB.log
 log4j.appender.D.Append = true
-log4j.appender.D.Threshold = INFO 
+log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
 log4j.appender.D.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
 
@@ -19,16 +19,9 @@ log4j.appender.D.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
 log4j.appender.E.File = D:/logs/ANewB.log
 log4j.appender.E.Append = true
-log4j.appender.E.Threshold = ERROR 
+log4j.appender.E.Threshold = DEBUG
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern =[ANewB][%p] [%-d{yyyy-MM-dd HH\:mm\:ss}] %C.%M(%L) | %m%n
-
-#Druid
-#log4j.logger.druid.sql=DEBUG
-#log4j.logger.druid.sql.DataSource=DEBUG
-#log4j.logger.druid.sql.Connection=DEBUG
-#log4j.logger.druid.sql.Statement=DEBUG
-#log4j.logger.druid.sql.ResultSet=DEBUG
 
 #Mybatis
 log4j.logger.newb.c.dao= DEBUG
@@ -37,17 +30,3 @@ log4j.logger.java.sql.Connection = TRACE
 log4j.logger.java.sql.Statement = TRACE  
 log4j.logger.java.sql.PreparedStatement = TRACE  
 log4j.logger.java.sql.ResultSet = TRACE
-
-
-
-# ConversionPattern参数的格式含义 
-# 格式名 含义 
-# %c 输出日志信息所属的类的全名 
-# %d 输出日志时间点的日期或时间，默认格式为ISO8601，也可以在其后指定格式，比如：%d{yyy-MM-dd HH:mm:ss }，输出类似：2002-10-18- 22：10：28 
-# %f 输出日志信息所属的类的类名 
-# %l 输出日志事件的发生位置，即输出日志信息的语句处于它所在的类的第几行 
-# %m 输出代码中指定的信息，如log(message)中的message 
-# %n 输出一个回车换行符，Windows平台为“rn”，Unix平台为“n” 
-# %p 输出优先级，即DEBUG，INFO，WARN，ERROR，FATAL。如果是调用debug()输出的，则为DEBUG，依此类推 
-# %r 输出自应用启动到输出该日志信息所耗费的毫秒数 
-# %t 输出产生该日志事件的线程名
