--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,7 @@
 eclipse.preferences.version=1
+encoding//src/com/inmsg/adc_provision/util/XmlRpcClientProxy.java=GBK
+encoding//src/com/inmsg/test/XmlRpcTest.java=GBK
+encoding//src/newb/c/api/XmlRpcTest.java=GBK
+encoding//src/newb/c/utilDb/StringHandle.java=GBK
 encoding/<project>=UTF-8
 encoding/src=UTF-8
