--- a/pom.xml
+++ b/pom.xml
@@ -268,6 +268,14 @@
 			<artifactId>mybatis-spring</artifactId>
 			<version>1.3.0</version>
 		</dependency>
+		
+		<!-- Spring 与 redis -->
+		<dependency>
+    		<groupId>org.springframework.data</groupId>
+    		<artifactId>spring-data-redis</artifactId>
+    		<version>1.7.3.RELEASE</version>
+		</dependency>
+		
 
 		<!-- MYSQL -->
 		<dependency>
@@ -348,6 +356,36 @@
 			<artifactId>commons-lang3</artifactId>
 			<version>3.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>2.1</version>
+		</dependency>
+		
+		<dependency>
+    		<groupId>commons-beanutils</groupId>
+    		<artifactId>commons-beanutils</artifactId>
+    		<version>1.9.2</version>
+		</dependency>
+		
+		<!-- guava 使用缓存 -->
+		<dependency>
+    		<groupId>com.google.guava</groupId>
+    		<artifactId>guava</artifactId>
+    		<version>19.0</version>
+		</dependency>
+		
+		<!-- redis -->
+		<dependency>
+    		<groupId>redis.clients</groupId>
+    		<artifactId>jedis</artifactId>
+    		<version>2.9.0</version>
+		</dependency>
+		
+		
+		
+		
 
 		<!-- logback-->
 		<!-- <dependency>
