--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,8 @@
 #mysql version database druid setting
 validationQuery=SELECT 1
-jdbc.url=jdbc:mysql://localhost:3306/newb?useUnicode=true&characterEncoding=utf-8     
+jdbc.url=jdbc\:mysql\://localhost\:3306/newb?useUnicode\=true&characterEncoding\=utf-8     
 # root 123456
 #jdbc.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=newb
 jdbc.username=root
 jdbc.password=123456
+cs=2,3,4,5,6
