--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -30,3 +30,5 @@ log4j.logger.java.sql.Connection = TRACE
 log4j.logger.java.sql.Statement = TRACE  
 log4j.logger.java.sql.PreparedStatement = TRACE  
 log4j.logger.java.sql.ResultSet = TRACE
+
+log4j.logger.newb.c= INFO
