--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -9,7 +9,7 @@ log4j.appender.C.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss
 
 ### log file ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.D.File = ./AnewB/debug.log
+log4j.appender.D.File = ./logs/debuglog4j.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
@@ -17,7 +17,7 @@ log4j.appender.D.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss
 
 ### exception ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
-log4j.appender.E.File = ./AnewB/error.log
+log4j.appender.E.File = ./logs/errorlog4j.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = DEBUG
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
@@ -31,4 +31,4 @@ log4j.logger.java.sql.Statement = TRACE
 log4j.logger.java.sql.PreparedStatement = TRACE  
 log4j.logger.java.sql.ResultSet = TRACE
 
-log4j.logger.newb.c= INFO
+#log4j.logger.newb.c= INFO
