--- a/src/config.properties
+++ b/src/config.properties
@@ -5,4 +5,4 @@ jdbc.url=jdbc\:mysql\://localhost\:3306/newb?useUnicode\=true&characterEncoding\
 #jdbc.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=newb
 jdbc.username=root
 jdbc.password=123456
-cs=2,3,4,5,6
+cs=测试中文
