--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -140,6 +140,14 @@
 	
 	<!-- welcome  -->
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>/comm/index.html</welcome-file>
 	</welcome-file-list>
+	<error-page>
+    	<error-code>404</error-code>
+    	<location>/comm/404.jsp</location>
+  	</error-page>
+  	<!-- <error-page>
+    	<error-code>500</error-code>
+    		<location>/comm/404.html</location>
+  	</error-page> -->
 </web-app>
