修改架构,添加swagger

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -142,10 +142,10 @@
 	<welcome-file-list>
 		<welcome-file>/comm/index.html</welcome-file>
 	</welcome-file-list>
-	<error-page>
+	<!-- <error-page>
     	<error-code>404</error-code>
     	<location>/comm/404.jsp</location>
-  	</error-page>
+  	</error-page> -->
   	<!-- <error-page>
     	<error-code>500</error-code>
     		<location>/comm/404.html</location>
