--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -32,3 +32,4 @@ log4j.logger.java.sql.PreparedStatement = TRACE
 log4j.logger.java.sql.ResultSet = TRACE
 
 #log4j.logger.newb.c= INFO
+log4j.logger.springfox.documentation.spring.web.readers.parameter.ParameterDataTypeReader = DEBUG
