--- a/pom.xml
+++ b/pom.xml
@@ -563,6 +563,20 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.4.1.RELEASE</version>
         </dependency> -->
+        
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+		<!-- Swagger -->
+		<!--springfox的基本信息文档: http://springfox.github.io/springfox/docs/current/#architecture-->
+		<dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-swagger-ui</artifactId>
+    		<version>2.6.0</version>
+		</dependency>
+		<dependency>
+    		<groupId>io.springfox</groupId>
+    		<artifactId>springfox-swagger2</artifactId>
+    		<version>2.6.0</version>
+		</dependency>
 		
 	</dependencies>
 	
