--- a/pom.xml
+++ b/pom.xml
@@ -421,7 +421,7 @@
     		<version>2.9.0</version>
 		</dependency>
 		
-		<!-- https://mvnrepository.com/artifact/io.netty/netty-all -->
+		<!-- https://mvnrepository.com/artifact/io.netty/netty-all   netty网络编程框架 netsocket -->
 		<dependency>
     		<groupId>io.netty</groupId>
     		<artifactId>netty-all</artifactId>
@@ -577,6 +577,15 @@
     		<artifactId>springfox-swagger2</artifactId>
     		<version>2.6.0</version>
 		</dependency>
+		
+		
+		<!-- 当当mybatis分库分表 -->
+		<dependency>
+    		<groupId>com.dangdang</groupId>
+    		<artifactId>sharding-jdbc-core</artifactId>
+    		<version>1.3.3</version>
+		</dependency>
+		
 		
 	</dependencies>
 	
