--- a/pom.xml
+++ b/pom.xml
@@ -585,6 +585,13 @@
     		<artifactId>sharding-jdbc-core</artifactId>
     		<version>1.3.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.dangdang/sharding-jdbc-config-common -->
+		<dependency>
+    		<groupId>com.dangdang</groupId>
+    		<artifactId>sharding-jdbc-config-spring</artifactId>
+    		<version>1.3.3</version>
+		</dependency>
+		
 		
 		
 	</dependencies>
