--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,16 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid</artifactId>
 			<version>1.0.25</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>jconsole</artifactId>
+					<groupId>com.alibaba</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>tools</artifactId>
+					<groupId>com.alibaba</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<!-- 连接池 -->
 		
@@ -368,6 +378,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<dependency>
+    		<groupId>net.sf.json-lib</groupId>
+    		<artifactId>json-lib</artifactId>
+    		<version>2.4</version>
+		</dependency>
+		
 
 		<!-- Springmvc,文件上传下载 -->
 		<dependency>
@@ -591,7 +609,6 @@
     		<artifactId>sharding-jdbc-config-spring</artifactId>
     		<version>1.3.3</version>
 		</dependency>
-		
 		
 		
 	</dependencies>
