--- a/.settings/com.genuitec.eclipse.core.prefs
+++ b/.settings/com.genuitec.eclipse.core.prefs
@@ -1,3 +1,3 @@
 eclipse.preferences.version=1
-validator.Checked=src/springshiro.xml,src/spring-shiro.xml
+validator.Checked=src/spring-shiro.xml,src/springshiro.xml,WebRoot/foot.html
 validator.Unchecked=
