--- a/pom.xml
+++ b/pom.xml
@@ -208,6 +208,12 @@
     		<groupId>com.cloudhopper.proxool</groupId>
    		 	<artifactId>proxool</artifactId>
    		 	<version>0.9.1</version>
+   		 	<exclusions>
+   		 		<exclusion>
+   		 			<artifactId>log4j</artifactId>
+   		 			<groupId>log4j</groupId>
+   		 		</exclusion>
+   		 	</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -465,6 +471,12 @@
     		<groupId>com.101tec</groupId>
     		<artifactId>zkclient</artifactId>
     		<version>0.9</version>
+    		<exclusions>
+    			<exclusion>
+    				<artifactId>log4j</artifactId>
+    				<groupId>log4j</groupId>
+    			</exclusion>
+    		</exclusions>
 		</dependency>
 		
 		
@@ -477,6 +489,10 @@
     			<exclusion>
     				<artifactId>netty</artifactId>
     				<groupId>io.netty</groupId>
+    			</exclusion>
+    			<exclusion>
+    				<artifactId>log4j</artifactId>
+    				<groupId>log4j</groupId>
     			</exclusion>
     		</exclusions>
 		</dependency>
@@ -491,47 +507,57 @@
             <artifactId>activemq-core</artifactId>  
             <version>5.7.0</version>  
         </dependency>  
-		
-		
-		
-		<dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency>
-		
 
+		<!-- https://mvnrepository.com/artifact/log4j/log4j -->
+		<dependency>
+    		<groupId>log4j</groupId>
+    		<artifactId>log4j</artifactId>
+    		<version>1.2.17</version>
+		</dependency>
 		<!-- logback-->
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.7</version>
 		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/org.logback-extensions/logback-ext-spring -->
+		<!-- log4j2 日志 -->
 		<!-- <dependency>
-    		<groupId>org.logback-extensions</groupId>
-    		<artifactId>logback-ext-spring</artifactId>
-    		<version>0.1.4</version>
+    		<groupId>org.apache.logging.log4j</groupId>
+    		<artifactId>log4j-core</artifactId>
+    		<version>2.7</version>
 		</dependency>
-		https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j
 		<dependency>
-    		<groupId>org.slf4j</groupId>
-   		 	<artifactId>jcl-over-slf4j</artifactId>
-    		<version>1.7.21</version>
+    		<groupId>org.apache.logging.log4j</groupId>
+    		<artifactId>log4j-slf4j-impl</artifactId>
+    		<version>2.7</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.apache.logging.log4j</groupId>
+    		<artifactId>log4j-1.2-api</artifactId>
+    		<version>2.7</version>
 		</dependency> -->
+		
 		<!-- slf4j -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.21</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi -->
-		<dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-log4j12 -->
+		<!-- <dependency>
+    		<groupId>org.slf4j</groupId>
+    		<artifactId>slf4j-log4j12</artifactId>
+    		<version>1.7.21</version>
+		</dependency> -->
+				
+		
+		<!-- https://mvnrepository.com/artifact/org.fusesource.jansi/jansi  日志控制台颜色 -->
+		<!-- <dependency>
     		<groupId>org.fusesource.jansi</groupId>
     		<artifactId>jansi</artifactId>
     		<version>1.13</version>
-		</dependency>
+		</dependency> -->
 		
 		<!--通用Mapper-->
         <dependency>
@@ -574,6 +600,12 @@
     		<groupId>net.sourceforge.jexcelapi</groupId>
     		<artifactId>jxl</artifactId>
     		<version>2.6.12</version>
+    		<exclusions>
+    			<exclusion>
+    				<artifactId>log4j</artifactId>
+    				<groupId>log4j</groupId>
+    			</exclusion>
+    		</exclusions>
 		</dependency>
 		
 		<!-- <dependency>
@@ -608,6 +640,14 @@
     		<groupId>com.dangdang</groupId>
     		<artifactId>sharding-jdbc-config-spring</artifactId>
     		<version>1.3.3</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok  -->
+		<!-- 使用注解快速完成model配置 -->
+		<dependency>
+    		<groupId>org.projectlombok</groupId>
+    		<artifactId>lombok</artifactId>
+    		<version>1.16.10</version>
 		</dependency>
 		
 		
