--- a/src/resources/log4j.properties
+++ b/src/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.rootLogger = INFO , C , D , E
 log4j.appender.C = org.apache.log4j.ConsoleAppender
 log4j.appender.C.Target = System.out
 log4j.appender.C.layout = org.apache.log4j.PatternLayout
-log4j.appender.C.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
+log4j.appender.C.layout.ConversionPattern = [ANewB][%p] [%-d{MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
 
 ### log file ###
 log4j.appender.D = org.apache.log4j.DailyRollingFileAppender
@@ -13,7 +13,7 @@ log4j.appender.D.File = ./logs/debuglog4j.log
 log4j.appender.D.Append = true
 log4j.appender.D.Threshold = DEBUG
 log4j.appender.D.layout = org.apache.log4j.PatternLayout
-log4j.appender.D.layout.ConversionPattern = [ANewB][%p] [%-d{yyyy-MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
+log4j.appender.D.layout.ConversionPattern = [ANewB][%p] [%-d{MM-dd HH:mm:ss}] %C.%M(%L) | %m%n
 
 ### exception ###
 log4j.appender.E = org.apache.log4j.DailyRollingFileAppender
@@ -21,7 +21,7 @@ log4j.appender.E.File = ./logs/errorlog4j.log
 log4j.appender.E.Append = true
 log4j.appender.E.Threshold = DEBUG
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
-log4j.appender.E.layout.ConversionPattern =[ANewB][%p] [%-d{yyyy-MM-dd HH\:mm\:ss}] %C.%M(%L) | %m%n
+log4j.appender.E.layout.ConversionPattern =[ANewB][%p] [%-d{MM-dd HH\:mm\:ss}] %C.%M(%L) | %m%n
 
 #Mybatis
 log4j.logger.newb.c.dao= DEBUG
@@ -32,4 +32,4 @@ log4j.logger.java.sql.PreparedStatement = TRACE
 log4j.logger.java.sql.ResultSet = TRACE
 
 #log4j.logger.newb.c= INFO
-log4j.logger.springfox.documentation.spring.web.readers.parameter.ParameterDataTypeReader = DEBUG
+log4j.logger.springfox.documentation.spring.web.readers=ERROR
