--- a/src/config.properties
+++ b/src/config.properties
@@ -2,6 +2,8 @@
 #jdbc.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=newb
 # root 123456
 validationQuery=SELECT 1
+jdbc.driver=com.mysql.jdbc.Driver
+
 jdbc.url=jdbc\:mysql\://localhost\:3306/newb?useUnicode\=true&characterEncoding\=utf-8     
 jdbc.username=root
 jdbc.password=123456
