--- a/.classpath
+++ b/.classpath
@@ -21,7 +21,7 @@
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/baiduPush.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="WebRoot/WEB-INF/lib/json-lib-2.4-jdk15.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
