--- a/pom.xml
+++ b/pom.xml
@@ -515,11 +515,11 @@
     		<version>1.2.17</version>
 		</dependency>
 		<!-- logback-->
-		<dependency>
+		<!-- <dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.1.7</version>
-		</dependency>
+		</dependency> -->
 		<!-- log4j2 日志 -->
 		<!-- <dependency>
     		<groupId>org.apache.logging.log4j</groupId>
