--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -24,12 +24,12 @@ log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern =[%p][%-d{HH\:mm\:ss}] %C.%M(%L) | %m%n
 
 #Mybatis
-#log4j.logger.newb.c.dao= DEBUG
-#log4j.logger.newb.c.mapping= DEBUG
-#log4j.logger.java.sql.Connection = TRACE  
-#log4j.logger.java.sql.Statement = TRACE  
-#log4j.logger.java.sql.PreparedStatement = TRACE  
-#log4j.logger.java.sql.ResultSet = TRACE
+log4j.logger.newb.c.dao= DEBUG
+log4j.logger.newb.c.mapping= DEBUG
+log4j.logger.java.sql.Connection = TRACE  
+log4j.logger.java.sql.Statement = TRACE  
+log4j.logger.java.sql.PreparedStatement = TRACE  
+log4j.logger.java.sql.ResultSet = TRACE
 
 #log4j.logger.newb.c= INFO
 log4j.logger.springfox.documentation.spring.web.readers=ERROR
