--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -1,6 +1,8 @@
 ### set log levels ###
 log4j.rootLogger = INFO , C , D , E 
 
+#log4j.rootLogger =ERROR
+
 ### console ###
 log4j.appender.C = org.apache.log4j.ConsoleAppender
 log4j.appender.C.Target = System.out
