--- a/pom.xml
+++ b/pom.xml
@@ -192,7 +192,6 @@
 			<artifactId>commons-fileupload</artifactId>
 			<version>1.2.2</version>
 		</dependency>
-		<!-- spring 依赖************************ -->
 		<!-- WEB................................ -->
 		<!-- <dependency>
 			<groupId>javax.servlet</groupId>
@@ -544,13 +543,20 @@
     		<artifactId>javase</artifactId>
     		<version>3.3.0</version>
 		</dependency>
-		<!--  网络连接 url -->
+		<!--  网络连接 url 同步网络请求 -->
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
 		<dependency>
     		<groupId>org.apache.httpcomponents</groupId>
     		<artifactId>httpclient</artifactId>
     		<version>4.5.2</version>
 		</dependency>
+		<!-- 异步网络请求 -->
+		<dependency>
+    		<groupId>com.ning</groupId>
+    		<artifactId>async-http-client</artifactId>
+    		<version>1.9.40</version>
+		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
 		<dependency>
     		<groupId>org.apache.httpcomponents</groupId>
@@ -620,6 +626,22 @@
     		<groupId>com.dangdang</groupId>
     		<artifactId>sharding-jdbc-config-spring</artifactId>
     		<version>1.3.3</version>
+		</dependency>
+		<!--webservice  cxf -->
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxws</artifactId>
+			<version>3.1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-frontend-jaxrs</artifactId>
+			<version>3.1.9</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.cxf</groupId>
+			<artifactId>cxf-rt-transports-http</artifactId>
+			<version>3.1.9</version>
 		</dependency>
 		
 		<!--dubbo -->
@@ -787,11 +809,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
             <version>1.4.1.RELEASE</version>
         </dependency> -->
-        <dependency>
+        <!-- <dependency>
     		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-redis</artifactId>
     		<version>1.4.1.RELEASE</version>
-		</dependency>
+		</dependency> -->
 		
 	</dependencies>
 	
