代码重新梳理

--- a/pom.xml
+++ b/pom.xml
@@ -506,12 +506,12 @@
 		<dependency>
     		<groupId>io.springfox</groupId>
     		<artifactId>springfox-swagger-ui</artifactId>
-    		<version>2.6.0</version>
+    		<version>2.6.1</version>
 		</dependency>
 		<dependency>
     		<groupId>io.springfox</groupId>
     		<artifactId>springfox-swagger2</artifactId>
-    		<version>2.6.0</version>
+    		<version>2.6.1</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok  -->
@@ -591,6 +591,14 @@
     		<version>5.0.0.Alpha2</version>
     		<!-- <version>4.1.5.Final</version> -->
 		</dependency>
+		
+		<!-- 数据后端校验 -->
+		<dependency>
+    		<groupId>org.hibernate</groupId>
+    		<artifactId>hibernate-validator</artifactId>
+    		<version>5.4.0.Beta1</version>
+		</dependency>
+		
 		
 		<!-- mybatis与spring -->
 		<dependency>
@@ -708,11 +716,11 @@
 			<artifactId>resteasy-client</artifactId>
 			<version>3.0.7.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>javax.validation</groupId>
-			<artifactId>validation-api</artifactId>
-			<version>1.0.0.GA</version>
-		</dependency>
+		<dependency>  
+    		<groupId>javax.validation</groupId>  
+    		<artifactId>validation-api</artifactId>  
+    		<version>1.1.0.Final</version>  
+		</dependency> 
 
 		<!-- 如果要使用json序列化 -->
 		<dependency>
