--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,8 @@
 # Auto detect text files and perform LF normalization
 * text=auto
 
+*.js linguist-language=java
+
 # Custom for Visual Studio
 *.cs     diff=csharp
 
