--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,7 @@
     		<groupId>javax.servlet</groupId>
     		<artifactId>javax.servlet-api</artifactId>
     		<version>4.0.0-b01</version>
+    		<scope>provided</scope>
 		</dependency>
 		
 		<dependency>
@@ -887,7 +888,6 @@
                         <version>3.3.8</version>
                     </dependency>
                 </dependencies>
-
 			</plugin>
 
 			<!-- 部署至本机 -->
@@ -895,13 +895,15 @@
 				<groupId>org.apache.tomcat.maven</groupId>
 				<artifactId>tomcat7-maven-plugin</artifactId>
 				<version>2.2</version>
-				<configuration>
+				<!-- <artifactId>tomcat8-maven-plugin</artifactId>
+   				<version>3.0-r1655215</version> -->
+				<!-- <configuration>
 					<port>8081</port>
 					<path>/AnewB</path>
 					<uriEncoding>UTF-8</uriEncoding>
 					<finalName>AnewB</finalName>
 					<server>tomcat7</server>
-				</configuration>
+				</configuration> -->
 			</plugin>
 		</plugins>
 	</build>
