--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,13 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+		<!-- 伪装数据 -->
+		<!-- https://mvnrepository.com/artifact/org.jmock/jmock -->
+		<dependency>
+		    <groupId>org.jmock</groupId>
+		    <artifactId>jmock</artifactId>
+		    <version>2.8.2</version>
+		</dependency>
 		<!-- OGNL -->
 		<dependency>
 			<groupId>opensymphony</groupId>
@@ -586,7 +593,7 @@
 		<dependency>
     		<groupId>org.springframework.data</groupId>
     		<artifactId>spring-data-redis</artifactId>
-    		<version>1.7.3.RELEASE</version>
+    		<version>1.8.0.RELEASE</version>
 		</dependency>
 		
 		<!-- spring session redis -->
