添加些注释，在加入分布式事务atomikos前，同步一次

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -3,12 +3,12 @@
 # root 123456
 validationQuery=SELECT 1
 jdbc.driver=com.mysql.jdbc.Driver
-
-jdbc.url-1=jdbc\:mysql\://localhost\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
+#Ã⁄—∂‘∆ 119.29.248.44  newb 123456
+jdbc.url-1=jdbc\:mysql\://127.0.0.1\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
 jdbc.password-1=123456
 
-jdbc.url-2=jdbc\:mysql\://localhost\:3306/newb2?useUnicode\=true&characterEncoding\=utf-8
+jdbc.url-2=jdbc\:mysql\://127.0.0.1\:3306/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
 jdbc.password-2=123456
 
@@ -16,4 +16,4 @@ mailserver.host=smtp.163.com
 mailserver.port=25
 mailserver.port.ssl=465
 mailserver.username=15173961640@163.com
-mailserver.password=ÂØÜÁ†Å
+mailserver.password=sh1003555356hs
