--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -66,14 +66,14 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<!-- 分布式 session -->
-	<filter>
+	<!-- <filter>
         <filter-name>springSessionRepositoryFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>springSessionRepositoryFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping> -->
 	
 	<!-- <filter>
 		<filter-name>logFilter</filter-name>
