--- a/pom.xml
+++ b/pom.xml
@@ -842,6 +842,39 @@
     		<version>1.4.1.RELEASE</version>
 		</dependency> -->
 		
+		<!-- https://mvnrepository.com/artifact/com.atomikos/transactions -->
+		<!-- 分布式事务 -->
+		<dependency>  
+		    <groupId>javax.transaction</groupId>  
+		    <artifactId>jta</artifactId>  
+		    <version>1.1</version>  
+		</dependency>  
+		<dependency>  
+		    <groupId>com.atomikos</groupId>  
+		    <artifactId>atomikos-util</artifactId>  
+		    <version>4.0.2</version>  
+		</dependency>  
+		<dependency>  
+		    <groupId>com.atomikos</groupId>  
+		    <artifactId>transactions</artifactId>  
+		    <version>4.0.2</version>  
+		</dependency>  
+		<dependency>  
+		    <groupId>com.atomikos</groupId>  
+		    <artifactId>transactions-jta</artifactId>  
+		    <version>4.0.2</version>  
+		</dependency>  
+		<dependency>  
+		    <groupId>com.atomikos</groupId>  
+		    <artifactId>transactions-jdbc</artifactId>  
+		    <version>4.0.2</version>  
+		</dependency>  
+		<dependency>  
+		    <groupId>com.atomikos</groupId>  
+		    <artifactId>transactions-api</artifactId>  
+		    <version>4.0.2</version>  
+		</dependency>  
+		
 	</dependencies>
 	
 
