添加分库分表，测试不同库和一个库 事务

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -42,7 +42,7 @@ log4j.logger.springfox.documentation.spring.web.readers=ERROR
 
 #dangdang sharding-jdbc
 log4j.logger.com.dangdang.ddframe.rdb.sharding.parser=INFO
-log4j.logger.com.dangdang.ddframe.rdb.sharding.router=INFO
+log4j.logger.com.dangdang.ddframe.rdb.sharding.router.SQLRouteEngine=DEBUG
 
 
 
