添加 atomikos 分布式事务

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -17,3 +17,10 @@ mailserver.port=25
 mailserver.port.ssl=465
 mailserver.username=15173961640@163.com
 mailserver.password=sh1003555356hs
+
+
+com.atomikos.icatch.service=com.atomikos.icatch.standalone.UserTransactionServiceFactory  
+com.atomikos.icatch.console_file_name = /home/logs/tx/tx.out.log  
+com.atomikos.icatch.log_base_name = txlog  
+com.atomikos.icatch.tm_unique_name = com.atomikos.spring.jdbc.tm  
+com.atomikos.icatch.console_log_level=DEBUG
