--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -5,8 +5,11 @@ redis.maxTotal=200
 redis.maxWait=30000
 redis.testOnBorrow=false
 redis.testOnReturn=true
+redis.timeOut=10000
 
 
 #redis
-redis.master.hostname=127.0.0.1
+#redis.master.hostname=127.0.0.1
+redis.master.hostname=119.29.248.44
+redis.master.password=123456
 redis.master.port=6379
