--- a/pom.xml
+++ b/pom.xml
@@ -588,6 +588,14 @@
     		<artifactId>spring-data-redis</artifactId>
     		<version>1.8.0.RELEASE</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-mongodb -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-mongodb</artifactId>
+		    <version>1.10.1.RELEASE</version>
+		</dependency>
+		
+		
 		
 		<!-- spring session redis -->
 		<dependency>
