--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -9,7 +9,8 @@ redis.timeOut=10000
 
 
 #redis
-#redis.master.hostname=127.0.0.1
-redis.master.hostname=119.29.248.44
-redis.master.password=123456
+redis.master.hostname=127.0.0.1
+#redis.master.hostname=119.29.248.44
+#redis.master.password=123456
 redis.master.port=6379
+redis.master.password=
