--- a/pom.xml
+++ b/pom.xml
@@ -913,6 +913,14 @@
 		    <version>2.8.5</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/com.xiaoleilu/hutool-core -->
+		<dependency>
+		    <groupId>com.xiaoleilu</groupId>
+		    <artifactId>hutool-all</artifactId>
+		    <version>3.0.4</version>
+		</dependency>
+		
+		
 		
 	</dependencies>
 	
