--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -163,11 +163,11 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 
-  <servlet-mapping>
-    <servlet-name>AnnotationHandleServlet</servlet-name>
-    <!-- 拦截所有以.do后缀结尾的请求 -->
-    <url-pattern>*.action</url-pattern>
-  </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AnnotationHandleServlet</servlet-name>
+        <!-- 拦截所有以.do后缀结尾的请求 -->
+        <url-pattern>*.action</url-pattern>
+    </servlet-mapping>
   
 	<!-- Spring MVC 配置 -->
 	<servlet>
@@ -188,14 +188,15 @@
 	<!-- <servlet-mapping> <servlet-name>rest</servlet-name> <url-pattern>/</url-pattern> 
 		</servlet-mapping> -->
 		
-	<servlet>
+		<!-- CXF 配置 未启用 -->
+	<!-- <servlet>
 		<servlet-name>CXFServlet</servlet-name>
 		<servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>CXFServlet</servlet-name>
 		<url-pattern>/webservice/*</url-pattern>
-	</servlet-mapping>
+	</servlet-mapping> -->
 		
 	<!-- 不拦截这些静态资源   使用springmvc标签-->
 	<!-- <servlet-mapping>
@@ -224,9 +225,9 @@
 	</session-config>
 	
 	<!-- welcome  -->
-	<!-- <welcome-file-list>
+	<welcome-file-list>
 		<welcome-file>/comm/index.html</welcome-file>
-	</welcome-file-list> -->
+	</welcome-file-list>
 	<!-- <error-page>
     	<error-code>404</error-code>
     	<location>/comm/404.jsp</location>
