--- a/pom.xml
+++ b/pom.xml
@@ -770,7 +770,7 @@
 			<version>3.0.7.Final</version>
 		</dependency>
 
-		<!-- 如果要使用tomcat server -->
+		<!-- 如果要使用tomcat server 嵌入式tomcat dubbox使用 -->
 		<dependency>
 			<groupId>org.apache.tomcat.embed</groupId>
 			<artifactId>tomcat-embed-core</artifactId>
