--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -5,8 +5,8 @@ redis.maxTotal=200
 redis.maxWait=30000
 redis.testOnBorrow=false
 redis.testOnReturn=true
-redis.timeOut=10000000
-#redis.timeOut=10000
+#redis.timeOut=10000000
+redis.timeOut=10000
 
 
 #redis
