--- a/pom.xml
+++ b/pom.xml
@@ -822,6 +822,12 @@
             <artifactId>activemq-core</artifactId>  
             <version>5.7.0</version>  
         </dependency>
+		<dependency>
+		    <groupId>org.apache.activemq</groupId>
+		    <artifactId>activemq-pool</artifactId>
+		    <version>5.7.0</version>
+		</dependency>
+        
         
 		<!-- 组件=============================== -->
 		
