--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,12 +1,16 @@
 #mysql version database druid setting
 #jdbc.url=jdbc:sqlserver://127.0.0.1:1433;databaseName=newb
-# root 123456
+# root 123456  上传记得修改密码
 validationQuery=SELECT 1
 jdbc.driver=com.mysql.jdbc.Driver
-#腾讯云 119.29.248.44  newb 123456
-jdbc.url-1=jdbc\:mysql\://127.0.0.1\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
+#aliyun 119.23.231.239  newb 7262140
+#jdbc.url-1=jdbc\:mysql\://127.0.0.1\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
+#jdbc.username-1=root
+#jdbc.password-1=123456
+
+jdbc.url-1=jdbc\:mysql\://119.23.231.239\:3306/newb?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-1=root
-jdbc.password-1=123456
+jdbc.password-1=7262140
 
 jdbc.url-2=jdbc\:mysql\://127.0.0.1\:3306/newb2?useUnicode\=true&characterEncoding\=utf-8
 jdbc.username-2=root
@@ -17,6 +21,8 @@ mailserver.port=25
 mailserver.port.ssl=465
 mailserver.username=15173961640@163.com
 mailserver.password=sh1003555356hs
+
+activemq.url=tcp://119.23.231.239:61616
 
 jdbc.xaDataSourceClassName=com.alibaba.druid.pool.xa.DruidXADataSource
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
