--- a/src/main/resources/mongodb.properties
+++ b/src/main/resources/mongodb.properties
@@ -1,9 +1,10 @@
-mongo.host=127.0.0.1
+#mongo.host=127.0.0.1
+mongo.host=119.23.231.239
 mongo.port=27017
-mongo.connectionsPerHost=8
-mongo.threadsAllowedToBlockForConnectionMultiplier=4
-mongo.connectTimeout=1000
-mongo.maxWaitTime=1500
+mongo.connectionsPerHost=10
+mongo.threadsAllowedToBlockForConnectionMultiplier=5
+mongo.connectTimeout=10000
+mongo.maxWaitTime=15000
 mongo.autoConnectRetry=true
 mongo.socketKeepAlive=true
 mongo.socketTimeout=1500
