--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//WebRoot/comm/404.jsp=UTF-8
 encoding//WebRoot/web/main.jsp=UTF-8
+encoding//src/main/java/newb/c/api/XmlRpcTest.java=GBK
 encoding//src/main/resources/config.properties=GBK
 encoding/<project>=UTF-8
 encoding/src=UTF-8
