去掉 oracle，dubbox2.8.4 等手动导入maven仓库的包,

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -40,4 +40,7 @@ log4j.logger.springfox.documentation.spring.web.readers=ERROR
 log4j.logger.com.dangdang.ddframe.rdb.sharding.parser=INFO
 log4j.logger.com.dangdang.ddframe.rdb.sharding.router=INFO
 
-
+#elasticsearch 
+log4j.logger.org.springframework.data.elasticseaech.core=DEBUG
+log4j.logger.org.elasticseaech=DEBUG
+log4j.logger.org.apache.lucene=DEBUG
