--- a/pom.xml
+++ b/pom.xml
@@ -353,12 +353,6 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.34</version>
 		</dependency>
-		<!-- oracle -->
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc14</artifactId>
-			<version>10.2.0.4.0</version>
-		</dependency>
 		<!-- SQL server -->
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
@@ -377,12 +371,6 @@
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.7</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
-		<dependency>
-    		<groupId>net.sf.json-lib</groupId>
-    		<artifactId>json-lib</artifactId>
-    		<version>2.4</version>
 		</dependency>
 		<!--apache 工具包 -->
 		<dependency>
@@ -685,7 +673,7 @@
 		<dependency>
     		<groupId>com.alibaba</groupId>
     		<artifactId>dubbo</artifactId>
-    		<version>2.8.4</version>
+    		<version>2.8.3</version>
     		<exclusions>
     			<exclusion>
     				<artifactId>spring</artifactId>
@@ -836,6 +824,14 @@
 		    <version>2.4.0</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/fr.pilato.spring/spring-elasticsearch -->
+		<dependency>
+		    <groupId>fr.pilato.spring</groupId>
+		    <artifactId>spring-elasticsearch</artifactId>
+		    <version>2.2.0</version>
+		</dependency>
+		
+		
 		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-elasticsearch -->
 		<dependency>
 		    <groupId>org.springframework.data</groupId>
@@ -856,9 +852,19 @@
 		    <version>2.1.4.RELEASE</version>
 		</dependency>
 
-		
-		
-
+		<!-- 手动加入maven的jar包  -->
+		<!-- oracle -->
+		<!-- <dependency>
+			<groupId>com.oracle</groupId>
+			<artifactId>ojdbc14</artifactId>
+			<version>10.2.0.4.0</version>
+		</dependency> -->
+		<!-- https://mvnrepository.com/artifact/net.sf.json-lib/json-lib -->
+		<!-- <dependency>
+    		<groupId>net.sf.json-lib</groupId>
+    		<artifactId>json-lib</artifactId>
+    		<version>2.4</version>
+		</dependency> -->
 
 		
         
@@ -917,7 +923,7 @@
 		</dependency>
 		<!-- activiti工作流  -->
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>javax.activation</groupId>
 			<artifactId>activation</artifactId>
 			<version>1.1</version>
@@ -951,7 +957,7 @@
 		    <groupId>com.fasterxml.jackson.dataformat</groupId>
 		    <artifactId>jackson-dataformat-xml</artifactId>
 		    <version>2.8.5</version>
-		</dependency>
+		</dependency> -->
 		
 		<!-- https://mvnrepository.com/artifact/com.xiaoleilu/hutool-core -->
 		<dependency>
