--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -26,6 +26,9 @@ activemq.url=tcp://119.23.231.239:61616
 
 dubbo.url=zookeeper://119.23.231.239:2181
 
+elasticsearch.cluster.name=qh
+elasticsearch.esNodes=119.23.231.239:9300
+
 jdbc.xaDataSourceClassName=com.alibaba.druid.pool.xa.DruidXADataSource
 jdbc.driverClassName=org.gjt.mm.mysql.Driver
 
