部署到服务器，vue地址改为服务器地址

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -228,7 +228,7 @@
 	
 	<!-- welcome  -->
 	<welcome-file-list>
-		<welcome-file>/comm/index.html</welcome-file>
+		<welcome-file>/web/vue/movieVue.html</welcome-file>
 	</welcome-file-list>
 	<!-- <error-page>
     	<error-code>404</error-code>
