--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -158,7 +158,7 @@
 		<init-param>
 			<description>配置要扫描包及其子包, 如果有多个包,以逗号分隔</description>
 			<param-name>basePackage</param-name>
-			<param-value>newb.c.mycontroller</param-value>
+			<param-value>newb.c.myframework.mvc</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
