--- a/pom.xml
+++ b/pom.xml
@@ -832,16 +832,14 @@
             <artifactId>jsr250-api</artifactId>  
             <version>1.0</version>  
         </dependency> -->  
-        <dependency>  
-            <groupId>org.apache.activemq</groupId>  
-            <artifactId>activemq-core</artifactId>  
-            <version>5.7.0</version>  
-        </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-all -->
 		<dependency>
 		    <groupId>org.apache.activemq</groupId>
-		    <artifactId>activemq-pool</artifactId>
-		    <version>5.7.0</version>
+		    <artifactId>activemq-all</artifactId>
+		    <version>5.10.0</version>
 		</dependency>
+
 		
 		<!-- elasticsearch -->
 		<!-- https://mvnrepository.com/artifact/org.elasticsearch/elasticsearch -->
