--- a/src/main/resources/mongodb.properties
+++ b/src/main/resources/mongodb.properties
@@ -1,6 +1,8 @@
-#mongo.host=127.0.0.1
 mongo.host=119.23.231.239
 mongo.port=27017
+mongodb.database=platform
+mongo.user=root
+mongo.password=Passw0rd
 mongo.connectionsPerHost=10
 mongo.threadsAllowedToBlockForConnectionMultiplier=5
 mongo.connectTimeout=10000
