--- a/pom.xml
+++ b/pom.xml
@@ -514,6 +514,14 @@
     		</exclusions>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+		<dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi</artifactId>
+		    <version>3.17-beta1</version>
+		</dependency>
+		
+		
 		<!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
 		<!-- Swagger -->
 		<!--springfox的基本信息文档: http://springfox.github.io/springfox/docs/current/#architecture-->
