--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -25,6 +25,9 @@ log4j.appender.E.Threshold = DEBUG
 log4j.appender.E.layout = org.apache.log4j.PatternLayout
 log4j.appender.E.layout.ConversionPattern =[%p][%-d{HH\:mm\:ss}] %C.%M(%L) | %m%n
 
+#SpringMvc
+log4j.logger.org.springframework.web.servlet=DEBUG
+
 #Mybatis
 log4j.logger.newb.c.backend.dao= DEBUG
 log4j.logger.newb.c.backend.mapping= DEBUG
